// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow up renders 1`] = `
.c0 {
  display: inline-block;
  width: 0;
  height: 0;
  vertical-align: middle;
  border-right: .3125em solid transparent;
  border-left: .3125em solid transparent;
  border-bottom: .4375em solid;
}

<div
  className="c0"
  direction="up"
/>
`;

exports[`BackgroundImage renders 1`] = `
.c0 {
  width: 100%;
  height: 0;
  padding-bottom: 75%;
  background-size: cover;
  background-position: center;
}

.c0 {
  width: 100%;
  height: 0;
  padding-bottom: 75%;
  background-size: cover;
  background-position: center;
}

<div
  backgroundImage="url(hello.png)"
  className="c0"
/>
`;

exports[`Banner src renders 1`] = `
.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  padding: 16px;
  color: white;
  background-color: black;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  padding: 16px;
  color: white;
  background-color: black;
}

.c4 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-size: cover;
  background-position: center;
  min-height: 80vh;
  color: white;
  background-color: black;
  background-image: url(hello.png);
}

@media screen and (min-width:40em) {
  .c2 {
    padding: 32px;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    padding: 32px;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    padding: 32px;
  }
}

<div
  className="c0 c1 c2 sc-bwzfXH c3 sc-bdVaJa c4 sc-bdVaJa c4"
/>
`;

exports[`Border 2 renders 1`] = `
.c0 {
  border: 2px solid;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`Border bottom renders 1`] = `
.c0 {
  border: 1px solid;
  border-bottom: 1px solid;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`Border left renders 1`] = `
.c0 {
  border: 1px solid;
  border-left: 1px solid;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`Border none renders 1`] = `
.c0 {
  border: none;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`Border right renders 1`] = `
.c0 {
  border: 1px solid;
  border-right: 1px solid;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`Border top renders 1`] = `
.c0 {
  border: 1px solid;
  border-top: 1px solid;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`Carousel index 2 renders 1`] = `
.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
}

.c0 > div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 100%;
}

.c0 > div:first-child {
  margin-left: -200%;
  -webkit-transition-property: margin;
  transition-property: margin;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c3 sc-bdVaJa c3"
  index={2}
/>
`;

exports[`Drawer height renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  height: 128px;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  height={128}
  position="fixed"
/>
`;

exports[`Drawer open renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer open side bottom renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer open side left renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  top: 0;
  bottom: 0;
  left: 0;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer open side right renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  top: 0;
  bottom: 0;
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer open side top renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  top: 0;
  left: 0;
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer side bottom renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer side left renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  top: 0;
  bottom: 0;
  left: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer side right renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  top: 0;
  bottom: 0;
  right: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer side top renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  top: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Drawer width renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 128px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 128px;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`Embed ratio renders 1`] = `
.c0 {
  height: 0;
  padding-bottom: 50%;
  position: relative;
  overflow: hidden;
}

.c0 > iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  border: 0;
}

<div
  className="c0"
/>
`;

exports[`Provider renders 1`] = `
.c0 {
  font-family: system-ui,sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 {
  font-family: system-ui,sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`Provider renders with custom theme 1`] = `
.c0 {
  font-family: sans;
}

.c0 * {
  box-sizing: border-box;
}

.c0 {
  font-family: sans;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`Switch checked renders 1`] = `
.c0 {
  color: blue;
  border-radius: 99999px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 40px;
  height: 24px;
  box-shadow: inset 0 0 0 2px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::after {
  content: " ";
  width: 16px;
  height: 16px;
  margin: 4px;
  border-radius: 99999px;
  -webkit-transition-property: -webkit-transform,color;
  -webkit-transition-property: transform,color;
  transition-property: transform,color;
  -webkit-transition-duration: .1s;
  transition-duration: .1s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

<div
  checked={true}
  className="c0"
  role="checkbox"
/>
`;

exports[`Text bold renders 1`] = `
.c0 {
  margin: 0px;
  font-weight: bold;
}

<div
  className="c0"
/>
`;

exports[`exports a Absolute component 1`] = `
.c0 {
  position: absolute;
}

<div
  className="c0 sc-TOsTZ kjYrri"
/>
`;

exports[`exports a Arrow component 1`] = `
.c0 {
  display: inline-block;
  width: 0;
  height: 0;
  vertical-align: middle;
  border-right: .3125em solid transparent;
  border-left: .3125em solid transparent;
  border-top: .4375em solid;
}

<div
  className="c0"
  direction="down"
/>
`;

exports[`exports a Avatar component 1`] = `
.c0 {
  height: 48px;
  width: 48px;
  border-radius: 99999px;
  display: inline-block;
}

<img
  className="c0"
/>
`;

exports[`exports a BackgroundImage component 1`] = `
.c0 {
  width: 100%;
  height: 0;
  padding-bottom: 75%;
  background-size: cover;
  background-position: center;
}

<div
  className="c0"
/>
`;

exports[`exports a Badge component 1`] = `
.c0 {
  font-size: 12px;
  margin-left: 4px;
  margin-right: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: white;
  background-color: blue;
  font-weight: bold;
  border-radius: 2px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
/>
`;

exports[`exports a Banner component 1`] = `
.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  padding: 16px;
  color: white;
  background-color: black;
}

.c4 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-size: cover;
  background-position: center;
  min-height: 80vh;
  color: white;
  background-color: black;
}

@media screen and (min-width:40em) {
  .c2 {
    padding: 32px;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    padding: 32px;
  }
}

<div
  className="c0 c1 c2 sc-bwzfXH c3 sc-bdVaJa c4 sc-bdVaJa c4"
/>
`;

exports[`exports a Base component 1`] = `
<div
  className=""
/>
`;

exports[`exports a BlockLink component 1`] = `
.c0 {
  color: inherit;
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
/>
`;

exports[`exports a Blockquote component 1`] = `
.c1 {
  margin: 0px;
  font-size: 20px;
}

.c0 {
  font-size: 20px;
  margin: 0px;
}

<blockquote
  className="c0 c1"
/>
`;

exports[`exports a Border component 1`] = `
.c0 {
  border: 1px solid;
  border-color: gray;
}

<div
  className="c0"
/>
`;

exports[`exports a Box component 1`] = `
.c0 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`exports a Button component 1`] = `
.c0 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

<button
  className="c0"
/>
`;

exports[`exports a ButtonCircle component 1`] = `
.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c1 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 9999px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 9999px;
}

<button
  className="c0 c1 sc-ifAKCX c2"
/>
`;

exports[`exports a ButtonOutline component 1`] = `
.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c1 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: blue;
  background-color: transparent;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px transparent;
}

.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c0 {
  color: blue;
  background-color: transparent;
  box-shadow: inset 0 0 0 2px blue;
}

<button
  className="c0 c1 sc-ifAKCX c2"
  hover={
    Object {
      "backgroundColor": "blue",
      "color": "white",
    }
  }
/>
`;

exports[`exports a ButtonTransparent component 1`] = `
.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c1 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px transparent;
}

.c2 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c0 {
  color: inherit;
  background-color: transparent;
}

<button
  className="c0 c1 sc-ifAKCX c2"
  focus={
    Object {
      "boxShadow": "none",
      "color": "blue",
      "outline": "none",
    }
  }
/>
`;

exports[`exports a CSS component 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "*{box-sizing:border-box}body{margin:0}",
    }
  }
/>
`;

exports[`exports a Caps component 1`] = `
.c2 {
  margin: 0px;
}

.c1 {
  margin: 0px;
  font-size: 12px;
}

.c2 {
  margin: 0px;
}

.c0 {
  font-size: 12px;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
}

<div
  className="c0 c1 sc-gqjmRU c2"
/>
`;

exports[`exports a Card component 1`] = `
.c0 {
  padding: 8px;
  background-color: white;
  border-radius: 2px;
  box-shadow: 2;
  overflow: hidden;
}

<div
  className="c0"
/>
`;

exports[`exports a Carousel component 1`] = `
.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
}

.c0 > div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 100%;
}

.c0 > div:first-child {
  margin-left: NaN%;
  -webkit-transition-property: margin;
  transition-property: margin;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c3 sc-bdVaJa c3"
/>
`;

exports[`exports a Checkbox component 1`] = `
.c0 {
  margin: 0px;
  margin-right: 8px;
}

<input
  className="c0"
  type="checkbox"
/>
`;

exports[`exports a Circle component 1`] = `
.c2 {
  font-size: 12px;
  margin-left: 4px;
  margin-right: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: white;
  background-color: blue;
  font-weight: bold;
  border-radius: 2px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  font-size: 12px;
  margin-left: 4px;
  margin-right: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: white;
  background-color: blue;
  font-weight: bold;
  border-radius: 99999px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  font-size: 12px;
  margin-left: 4px;
  margin-right: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: white;
  background-color: blue;
  font-weight: bold;
  border-radius: 2px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  height: 24px;
  width: 24px;
  border-radius: 99999px;
}

<div
  align="center"
  className="c0 c1 sc-fAjcbJ c2"
/>
`;

exports[`exports a Close component 1`] = `
.c4 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:disabled {
  opacity: 0.25;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c4 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:disabled {
  opacity: 0.25;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c4 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:disabled {
  opacity: 0.25;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c3 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:disabled {
  opacity: 0.25;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px transparent;
}

.c4 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:disabled {
  opacity: 0.25;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c2 {
  font-size: 20px;
  font-weight: bold;
  line-height: 1;
  margin: 0px;
  padding: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  opacity: 0.25;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px transparent;
}

.c3 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:disabled {
  opacity: 0.25;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px transparent;
}

.c4 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:disabled {
  opacity: 0.25;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c1 {
  color: inherit;
  background-color: transparent;
}

.c1 {
  color: inherit;
  background-color: transparent;
}

.c0 {
  margin: 0px;
  padding: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 20px;
  line-height: 1;
  width: 24px;
  height: 24px;
}

<button
  className="c0 c1 c2 sc-gzVnrw c1 sc-ifAKCX c3 sc-ifAKCX c4"
  focus={
    Object {
      "boxShadow": "none",
      "color": "blue",
      "outline": "none",
    }
  }
>
  ×
</button>
`;

exports[`exports a Code component 1`] = `
.c0 {
  font-size: 14px;
  font-family: mono;
}

<code
  className="c0"
/>
`;

exports[`exports a Column component 1`] = `
.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 32px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c2 {
  box-sizing: border-box;
}

.c0 {
  margin-bottom: 32px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

<div
  className="c0 c1 sc-bdVaJa c2"
/>
`;

exports[`exports a Container component 1`] = `
.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c2 {
  box-sizing: border-box;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  max-width: 1024px;
}

<div
  className="c0 c1 sc-bdVaJa c2"
/>
`;

exports[`exports a DarkMode component 1`] = `
.c0 {
  box-sizing: border-box;
  color: #ffffff;
  background-color: #000000;
}

<div
  className="c0"
/>
`;

exports[`exports a Divider component 1`] = `
.c0 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 16px;
  margin-bottom: 16px;
  border: 0;
  border-bottom: 1px solid;
  border-color: gray;
}

<hr
  className="c0"
/>
`;

exports[`exports a Donut component 1`] = `
.c0 {
  color: blue;
}

<svg
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="c0"
  color="blue"
  height={128}
  is={[Function]}
  strokeWidth={2}
  value={1}
  viewBox="0 0 32 32"
  width={128}
>
  <circle
    cx={16}
    cy={16}
    fill="none"
    opacity="0.125"
    r={14}
    stroke="currentcolor"
    strokeWidth={2}
  />
  <circle
    cx={16}
    cy={16}
    fill="none"
    r={14}
    stroke="currentcolor"
    strokeDasharray={87.96459430051421}
    strokeDashoffset={0}
    strokeWidth={2}
    transform="rotate(-90 16 16)"
  />
</svg>
`;

exports[`exports a Dot component 1`] = `
.c0 {
  margin: 0px;
  padding: 0px;
  height: 16px;
  width: 16px;
  background-color: darken;
  border-radius: 99999px;
  border: 4px solid;
  border-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-clip: padding-box;
}

<button
  className="c0"
  disabledStyle={
    Object {
      "opacity": 0.25,
    }
  }
  focus={
    Object {
      "backgroundColor": "blue",
    }
  }
  hover={
    Object {
      "backgroundColor": "blue",
    }
  }
/>
`;

exports[`exports a Drawer component 1`] = `
.c1 {
  box-sizing: border-box;
  width: 320px;
  color: white;
  background-color: black;
}

.c0 {
  position: fixed;
  color: white;
  background-color: black;
  width: 320px;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="c0 c1 sc-bdVaJa c1"
  position="fixed"
/>
`;

exports[`exports a Embed component 1`] = `
.c0 {
  height: 0;
  padding-bottom: 56.25%;
  position: relative;
  overflow: hidden;
}

.c0 > iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  border: 0;
}

<div
  className="c0"
/>
`;

exports[`exports a Fixed component 1`] = `
.c0 {
  position: fixed;
}

<div
  className="c0 sc-TOsTZ kjYrri"
/>
`;

exports[`exports a Flex component 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0 c1 sc-bdVaJa c1"
/>
`;

exports[`exports a Group component 1`] = `
.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  border-radius: 0;
}

.c0 > *:first-child {
  border-radius: 4px 0 0 4px;
}

.c0 > *:last-child {
  border-radius: 0 4px 4px 0;
}

<div
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c2 sc-bdVaJa c2"
/>
`;

exports[`exports a Heading component 1`] = `
.c0 {
  font-size: 32px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

<h2
  className="c0"
/>
`;

exports[`exports a Hide component 1`] = `
.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  display: block;
}

<div
  className="c0 c1 sc-bdVaJa c1"
/>
`;

exports[`exports a Image component 1`] = `
.c0 {
  display: block;
  max-width: 100%;
  height: auto;
}

<img
  className="c0"
/>
`;

exports[`exports a Input component 1`] = `
.c0 {
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
  border: 0;
  border-color: gray;
  box-shadow: 1;
  border-radius: 2px;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: inline-block;
  vertical-align: middle;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px undefined;
}

.c0:disabled {
  opacity: 0.25;
}

<input
  className="c0"
  type="text"
/>
`;

exports[`exports a Label component 1`] = `
.c0 {
  font-size: 14px;
  margin-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<label
  align="center"
  className="c0"
/>
`;

exports[`exports a Lead component 1`] = `
.c2 {
  margin: 0px;
}

.c2 {
  margin: 0px;
}

.c1 {
  margin: 0px;
  font-size: 20px;
  line-height: 1.25;
}

.c2 {
  margin: 0px;
}

.c0 {
  font-size: 20px;
  line-height: 1.25;
}

<div
  className="c0 c1 sc-gqjmRU c2"
/>
`;

exports[`exports a Link component 1`] = `
.c0 {
  color: blue;
}

<a
  className="c0"
/>
`;

exports[`exports a Measure component 1`] = `
.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c0 {
  max-width: 32em;
}

<div
  className="c0 c1 sc-gqjmRU c1"
/>
`;

exports[`exports a Message component 1`] = `
.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-weight: bold;
  color: white;
  background-color: blue;
  min-height: 48px;
  -webkit-font-smoothing: antialiased;
}

<div
  align="center"
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c3 sc-bdVaJa c3"
/>
`;

exports[`exports a Modal component 1`] = `
.c2 {
  padding: 16px;
  background-color: white;
  top: 50%;
  left: 50%;
}

.c1 {
  position: fixed;
}

.c1 {
  position: fixed;
}

.c0 {
  top: 50%;
  left: 50%;
  padding: 16px;
  background-color: white;
  border-radius: 2px;
  max-width: 100vw;
  max-height: 100vh;
  box-shadow: 0 0 0 60vmax undefined,0 0 32px undefined;
  overflow: auto;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  className="c0 c1 c2 sc-ksYbfQ c1 sc-TOsTZ sc-TOsTZ kjYrri"
/>
`;

exports[`exports a NavLink component 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  font-size: 14px;
  font-weight: bold;
  padding: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
}

.c0:disabled {
  opacity: 0.25;
}

<a
  className="c0"
/>
`;

exports[`exports a Overlay component 1`] = `
.c2 {
  padding: 16px;
  background-color: white;
  top: 50%;
  left: 50%;
}

.c2 {
  padding: 16px;
  background-color: white;
  top: 50%;
  left: 50%;
}

.c1 {
  position: fixed;
}

.c1 {
  position: fixed;
}

.c1 {
  position: fixed;
}

.c0 {
  top: 50%;
  left: 50%;
  padding: 16px;
  background-color: white;
  border-radius: 2px;
  max-width: 100vw;
  max-height: 100vh;
  box-shadow: 0 0 0 60vmax undefined,0 0 32px undefined;
  overflow: auto;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c0 {
  top: 50%;
  left: 50%;
  padding: 16px;
  background-color: white;
  border-radius: 2px;
  max-width: 100vw;
  max-height: 100vh;
  box-shadow: 0 0 0 60vmax undefined,0 0 32px undefined;
  overflow: auto;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  className="c0 c1 c2 sc-ksYbfQ c1 sc-TOsTZ sc-TOsTZ kjYrri"
/>
`;

exports[`exports a Panel component 1`] = `
.c0 {
  background-color: white;
  border-radius: 2px;
  border: 1px solid;
  border-color: gray;
  overflow: hidden;
}

<div
  className="c0"
/>
`;

exports[`exports a Position component 1`] = `
<div
  className=""
/>
`;

exports[`exports a Pre component 1`] = `
.c0 {
  font-size: 14px;
  font-family: mono;
  margin: 0px;
  overflow: auto;
}

<pre
  className="c0"
/>
`;

exports[`exports a Progress component 1`] = `
.c0 {
  width: 100%;
  margin: 0px;
  padding-left: 0px;
  padding-right: 0px;
  color: blue;
  background-color: gray;
  border-radius: 2px;
  box-sizing: border-box;
  diplay: block;
  height: 4px;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0::-webkit-progress-value {
  background-color: currentcolor;
}

.c0::-moz-progress-bar {
  background-color: currentcolor;
}

<progress
  className="c0"
/>
`;

exports[`exports a Provider component 1`] = `
.c0 {
  font-family: system-ui,sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`exports a Radio component 1`] = `
.c0 {
  margin: 0px;
  margin-right: 8px;
}

<input
  className="c0"
  type="radio"
/>
`;

exports[`exports a Relative component 1`] = `
.c0 {
  position: relative;
}

<div
  className="c0 sc-TOsTZ kjYrri"
/>
`;

exports[`exports a Root component 1`] = `
.c0 {
  font-family: sans;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`exports a Row component 1`] = `
.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin-left: -16px;
  margin-right: -16px;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-left: -16px;
  margin-right: -16px;
}

<div
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c3 sc-bdVaJa c3"
/>
`;

exports[`exports a Samp component 1`] = `
.c0 {
  font-size: 14px;
  font-family: mono;
}

.c0 {
  font-size: 14px;
  font-family: mono;
}

<samp
  className="c0 sc-kpOJdX c0"
/>
`;

exports[`exports a Select component 1`] = `
.c0 {
  margin: 0px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
  border: 0;
  border-color: gray;
  box-shadow: 1;
  border-radius: 2px;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: 0;
  background: url("data:image/svg+xml;utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='32'%20height='32'%20viewbox='0%200%2032%2032'%20fill='currentcolor'%3E%20%3Cpath%20d='M0%206%20L32%206%20L16%2028%20z'%20/%3E%20%3C/svg%3E");
  background-position: calc(100% - 8px) center;
  background-repeat: no-repeat;
  background-size: 8px 8px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px undefined;
}

<select
  className="c0"
/>
`;

exports[`exports a Slider component 1`] = `
.c0 {
  width: 100%;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 8px;
  margin-bottom: 8px;
  color: inherit;
  background-color: gray;
  border-radius: 99999px;
  display: block;
  height: 4px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0::-webkit-slider-thumb {
  width: 16px;
  height: 16px;
  background-color: currentcolor;
  border: 0;
  border-radius: 99999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<input
  className="c0"
  type="range"
/>
`;

exports[`exports a Small component 1`] = `
.c1 {
  margin: 0px;
  font-size: 12px;
}

.c1 {
  margin: 0px;
  font-size: 12px;
}

.c0 {
  font-size: 12px;
}

<small
  className="c0 c1"
  m={0}
/>
`;

exports[`exports a Sticky component 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
}

<div
  className="c0 sc-TOsTZ kjYrri"
/>
`;

exports[`exports a Subhead component 1`] = `
.c2 {
  font-size: 32px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

.c1 {
  font-size: 24px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

.c2 {
  font-size: 32px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

.c0 {
  font-size: 24px;
}

<h3
  className="c0 c1 sc-VigVT c2"
/>
`;

exports[`exports a Switch component 1`] = `
.c0 {
  color: blue;
  border-radius: 99999px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 40px;
  height: 24px;
  background-color: transparent;
  box-shadow: inset 0 0 0 2px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::after {
  content: " ";
  width: 16px;
  height: 16px;
  margin: 4px;
  border-radius: 99999px;
  -webkit-transition-property: -webkit-transform,color;
  -webkit-transition-property: transform,color;
  transition-property: transform,color;
  -webkit-transition-duration: .1s;
  transition-duration: .1s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<div
  className="c0"
  role="checkbox"
/>
`;

exports[`exports a Tab component 1`] = `
.c0 {
  font-size: 14px;
  font-weight: bold;
  margin-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: inherit;
  border-bottom: 2px solid;
  border-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
  hover={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`exports a Tabs component 1`] = `
.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  border-bottom: 1px solid;
  border-color: gray;
}

<div
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c2 sc-bdVaJa c2"
/>
`;

exports[`exports a Text component 1`] = `
.c0 {
  margin: 0px;
}

<div
  className="c0"
/>
`;

exports[`exports a Textarea component 1`] = `
.c0 {
  margin: 0px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
  font-size: inherit;
  color: inherit;
  background-color: transparent;
  border: 0;
  border-color: gray;
  box-shadow: 1;
  border-radius: 2px;
  font-family: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:focus {
  outline: none;
  box-shadow: inset 0 0 0 1pxundefined;
}

.c0:disabled {
  opacity: 0.25;
}

<textarea
  className="c0"
/>
`;

exports[`exports a Toolbar component 1`] = `
.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  padding-left: 8px;
  padding-right: 8px;
  color: white;
  background-color: black;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  padding-left: 8px;
  padding-right: 8px;
  color: white;
  background-color: black;
  min-height: 48px;
  -webkit-font-smoothing: antialiased;
}

<div
  align="center"
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c3 sc-bdVaJa c3"
/>
`;

exports[`exports a Tooltip component 1`] = `
.c0 {
  color: white;
  background-color: black;
  display: inline-block;
  position: relative;
  color: inherit;
  background-color: transparent;
}

.c0::before {
  display: none;
  content: "undefined";
  position: absolute;
  bottom: 100%;
  left: 50%;
  -webkit-transform: translate(-50%,-4px);
  -ms-transform: translate(-50%,-4px);
  transform: translate(-50%,-4px);
  white-space: nowrap;
  font-size: 10px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: undefinedpx;
}

.c0::after {
  display: none;
  position: absolute;
  bottom: 100%;
  left: 50%;
  -webkit-transform: translate(-50%,8px);
  -ms-transform: translate(-50%,8px);
  transform: translate(-50%,8px);
  content: " ";
  border-width: 6px;
  border-style: solid;
  border-color: transparent;
}

.c0:hover::before,
.c0:hover::after {
  display: block;
}

<div
  className="c0"
/>
`;

exports[`exports a Truncate component 1`] = `
.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c1 {
  margin: 0px;
}

.c0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  className="c0 c1 sc-gqjmRU c1"
/>
`;
